--- a/index.html
+++ b/index.html
@@ -33,14 +33,38 @@
         </section>
 
         <section class="products">
-              <img src="images/bleu-pro.jpg" alt="Image 1">
-              <img src="images/creed-pro.webp" alt="Image 2">
-              <img src="images/eros-pro.jpg" alt="Image 3">
+            <div class="prod-container">
+                <img src="images/new1-bleu.jpg" alt="Bleu">
+                <h1>Bleu de Chanel $115</h1>
+                <p>Bleu de Chanel by Chanel is a <br> Woody Aromatic fragrance for men.</p>
+                <button>Buy now</button>
+            </div>
+
+            <div class="prod-container">
+                <img src="images/new1-creed.jpg" alt="Creed">
+                <h1>Creed Aventus 200$</h1>
+                <p>Aventus by Creed is a Chypre <br> Fruity fragrance for <br> men.</p>
+                <button>Buy now</button>
+            </div>
+
+            <div class="prod-container">
+                <img src="images/new1-eros.jpg" alt="Eros">
+                <h1>Versace Eros <br>$150</h1>
+                <p>Eros by Versace is a Aromatic Fougere <br> fragrance for men.</p>
+                <button>Buy now</button>
+            </div>
+
         </section>
+
+        
+
+
 
     </main>
 
-    <footer></footer>
+    <footer>
+        <h4 style="color: white; line-height: 80px; margin-left: 20px;"> 20203 - All rights reserved</h4>
+    </footer>
 
 
 </body>
